--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,24 @@ label {
   background-color: #8371fd;
 }
 
+.next-btn {
+  display: inline-block;
+  width: 100%;
+  height: 43px;
+  background-color: #151111;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.8rem;
+  font-size: 0.8rem;
+  margin-bottom: 2rem;
+  transition: 0.3s;
+}
+
+.next-btn:hover {
+  background-color: #8371fd;
+}
+
 .text {
   color: #bbb;
   font-size: 0.7rem;
